# Quark

./: Cargo.toml  QUICKSTART.md  README.md
.claude/: settings.local.json
quark/: Cargo.toml
quark-macros/: Cargo.toml
quark-macros/src/: command.rs  lib.rs
quark/examples/: README.md  async_commands.rs  basic.rs  game_console.rs  interactive_console.rs
quark/src/: command.rs  error.rs  lib.rs  metadata.rs  parser.rs  registry.rs
